# janus_vol_pred

./: .gitignore  README.md  pyproject.toml  run_daily_production.sh
janus_vol_pred/: book_ticker_source.py  daily_production_job.py  features_label.py  features_label_backup.py  features_label_backup_02.py  features_label_vaild_temp.py  model_loader.py  model_publish.py  predict_service.py  realtime_feature.py  temp.py  train.py  train_production_backup.py  training_preparer.py  zeromq-server_client.py
janus_vol_pred/analysis/: check_data.ipynb  data.ipynb  result.ipynb
janus_vol_pred/analysis/pygo_bridge/: socket.md  types.go  zeromq-client.py  zeromq-client_test.py  zeromq-server.py  zeromq-server_client_test_01.py  zeromq-server_test.py  zeromq-server_test_01.py
janus_vol_pred/config/: config.yaml  config_backup_02.yaml  config_backup_02_temp.yaml
janus_vol_pred/docs/: daily_retrain_prepare.md  实盘仓库迁移计划.md  实盘代码检查步骤文档.md  实盘部署方案.md  实盘预测方式.md  实盘预测服务设计方案_v2.md  每日定时重训前的数据补齐与特征准备方案（修正版）.md  波动率预测系统设计文档.md  监听和推送文档.md  计算方式优化.md
janus_vol_pred/utils/: utils.py
