[project]
name = "janus-vol-pred"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "hftbacktest (>=2.4.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "jupyter-contrib-nbextensions (>=0.7.0,<0.8.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "tardis-dev (>=2.1.2,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "pyzmq (>=27.1.0,<28.0.0)",
    "orjson (>=3.11.7,<4.0.0)",
    "websocket-client (>=1.9.0,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "notebook (>=7.5.5,<8.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "setproctitle (>=1.3.7,<2.0.0)",
]

[tool.poetry]
packages = [{include = "janus_vol_pred"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
